design pattern impl. + more defensive checks